# AI_PODCAST_GENERATOR

./: .env  README.md  docker-compose.yml  main.py  podcast.db  pyproject.toml  requirements.txt  test_tts_import.py
app/: config.py  database.py  main.py
app/models/: log.py  user.py
app/routers/: admin.py  auth.py  podcast.py
app/schemas/: podcast.py  user.py
app/services/: llm.py  tts.py
app/utils/: auth.py  language.py  rate_limiter.py
static/: index.html
