[project]
name = "podcast-tts-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "edge-tts>=7.2.7",
    "fastapi>=0.129.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "numpy>=2.4.2",
    "piper>=0.14.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "uvicorn[standard]>=0.41.0",
]
